--- a/Nyafilmer/nyafilmer.user.css
+++ b/Nyafilmer/nyafilmer.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           nyafilmer
+@name           Nyafilmer
 @namespace      github.com/openstyles/stylus
 @version        1.0.0
 @description    Dark theme
