--- a/Nyafilmer123/Nyafilmer123.user.css
+++ b/Nyafilmer123/Nyafilmer123.user.css
@@ -4,6 +4,8 @@
 @description  Dark theme
 @author       Jimpin
 @license      GPL-3.0
+@homepageURL  https://github.com/Jimpin/Themes/
+@updateURL    https://github.com/Jimpin/Themes/raw/master/nyafilmer.user.css
 
 @-moz-document url-prefix("http://www.nyafilmer"), url-prefix("https://www.nyafilmer"), url-prefix("http://nyafilmer"), url-prefix("https://nyafilmer"), domain("nyafilmer") {
 
