--- a/Nyafilmer123/nyafilmer123.user.css
+++ b/Nyafilmer123/nyafilmer123.user.css
@@ -4,8 +4,8 @@
 @description  Dark theme
 @author       Jimpin
 @homepageURL  https://github.com/Jimpin/Themes/
-@updateURL    https://github.com/Jimpin/Themes/raw/master/nyafilmer123.user.css
-license      GPL-3.0
+@updateURL    https://github.com/Jimpin/Themes/Nyfilmer123/raw/master/nyafilmer123.user.css
+@license      GPL-3.0
 
 @-moz-document url-prefix("http://www.nyafilmer"), url-prefix("https://www.nyafilmer"), url-prefix("http://nyafilmer"), url-prefix("https://nyafilmer"), domain("nyafilmer") {
 
