--- a/Nyafilmer/nyafilmer.user.css
+++ b/Nyafilmer/nyafilmer.user.css
@@ -5,7 +5,7 @@
 @description  Dark theme
 @author       Jimpin
 @homepageURL  https://github.com/Jimpin/Themes/
-@updateURL    https://github.com/Jimpin/Themes/raw/master/nyafilmer.user.css
+@updateURL    https://raw.githubusercontent.com/Jimpin/Themes/master/Nyafilmer/nyafilmer.user.css
 @license      GPL-3.0
 ==/UserStyle== */
 
