--- a/Nyafilmer/nyafilmer.user.css
+++ b/Nyafilmer/nyafilmer.user.css
@@ -2240,11 +2240,25 @@ a, .movie-title a {
     max-width: 100px;
     height: 18px;
 }
+
+.single-content.movie .poster {
+    display: block;
+    width: 100%;
+    height: 0;
+    padding-bottom: 148%;
+    position: relative;
+    box-sizing: border-box;
+    border-radius: 3px;
+    overflow: hidden;
+    border: 2px solid #000000 !important;
+}
+
 .single-content.movie .rating-bottom {
     background: #1d1d1d;
     position: absolute;
     /* color: #B2D244; */
 }
+
 .single-content.movie .rating-bottom {
     background: #1d1d1d;
     position: absolute;
@@ -2252,6 +2266,7 @@ a, .movie-title a {
     font-size: 12px;
     text-align: center;
 }
+
 .postTabs_season {
     float: left;
 }
@@ -2359,6 +2374,16 @@ a, a:visited {
     color: #2bc8da;
     text-align: center;
 }
+
+.movie-reactions {
+    bottom: 0;
+    height: 26px;
+    position: absolute;
+    background: #151515d6 !important;
+    z-index: 3;
+    border-top: 2px solid #000 !important;
+}
+
 body, .movie-release {
     color: #2bc8da;
 }
